<resources>
    <string name="app_name">A Simple Calculator</string>
    <string name="history">History shows here</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="mutiply">*</string>
    <string name="divide">/</string>
    <string name="add">+</string>
    <string name="subtract">-</string>
    <string name="sin">sin()</string>
    <string name="cos">cos()</string>
    <string name="tan">tan()</string>
    <string name="pi">π</string>
    <string name="clear">Clear</string>
    <string name="dot">.</string>
    <string name="equals">=</string>
    <string name="divideError">You may not divide by zero</string>
    <string name="trigError">Invalid input for tangent</string>
    <string name="badInput">Bad Input</string>
</resources>
